<resources>
    <string name="app_name" translatable="false">Tripaway</string>
    <string name="title_activity_trips">TripsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="GOOGLE">Continue with Google</string>
    <string name="logout">logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="history_trips">History Trips</string>
    <string name="history_on_map">History on map</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="tripawy">TRIPAWY</string>
    <string name="maps_splash">WHEREVER YOU ARE</string>
    <string name="maps_splash2">TRIAPWY COVERS YOUR BACK</string>

    <string name="facebook_app_id">3645242508919069</string>
    <string name="fb_login_protocol_scheme">fb3645242508919069</string>
    <string name="skip">skip</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">username</string>
    <string name="start">START</string>
    <string name="done">Done</string>
    <string name="show_details">Show Details</string>
    <string name="open_map">open map</string>
    <string name="snooze">Snooze</string>
    <string name="are_you_sure_you_want_to_delete_this_trip">Are you sure you want to delete this trip ?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="are_you_sure_you_want_to_add_this_trip">Are you sure you want to add this trip ?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="enter_note_title">Enter Note Title</string>
    <string name="description">Description ...</string>
    <string name="add">add</string>
    <string name="phone_number">Phone Number:</string>
    <string name="continuee">Continue</string>
    <string name="start_point">Start Point</string>
    <string name="distination_point">Distination Point</string>
    <string name="our_notes">Our Notes</string>
    <string name="async">Async</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
</resources>