<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="230dp"
    android:layout_gravity="center"
    android:background="@drawable/shape">

    <EditText
        android:id="@+id/noteTitleET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_text"
        android:gravity="center"
        android:hint="@string/enter_note_title"
        android:inputType="textPersonName"
        android:padding="@dimen/_8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteDescET"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="@dimen/_8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitleET" />

    <Button
        android:id="@+id/cancelNoteDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttonshape"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/AddNoteDialogBtn"
        app:layout_constraintTop_toTopOf="@+id/AddNoteDialogBtn" />

    <Button
        android:id="@+id/AddNoteDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/buttonshape"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>