<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_350dp"
    android:layout_height="180dp"
    android:layout_gravity="center"
    android:background="@drawable/shape">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/shape_text"
        android:text="@string/are_you_sure_you_want_to_delete_this_trip"
        android:textColor="#80000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/noDeleteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yesDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:text="@string/yes"
        android:textColor="#803F51B5"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/noDeleteBtn" />

    <Button
        android:id="@+id/noDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/no"
        android:textColor="#803F51B5"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/yesDeleteBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yesDeleteBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>